test/bad/classes/struct07.px

class A def
    x: Int

A(1, 2)
